move previous assignments dirs to winter_2019/

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,20 @@
 .DS_Store
-a2/utils/datasets
+__pycache__/
+
 *.npy
 *.pickle
-__pycache__/
 *.conll
-a3/data/en-cw.txt
 *pkl
-a4/**/*.en
-a4/**/*.es
-a4/**/vocab.json
-
 *.bin
 *.bin.optim
 
 en_es_data/
-a5_public/**/test_outputs_a4.txt
-a5_public/**/vocab*.json
-a5_public/**/outputs/
+
+winter_2019/a2/utils/datasets
+winter_2019/a3/data/en-cw.txt
+winter_2019/a4/**/*.en
+winter_2019/a4/**/*.es
+winter_2019/a4/**/vocab.json
+winter_2019/a5_public/**/test_outputs_a4.txt
+winter_2019/a5_public/**/vocab*.json
+winter_2019/a5_public/**/outputs/
